--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <meta property="og:url" content="http://erezhod.com" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Erez Hod | Developer" />
+    <meta property="og:title" content="Erez Hod | iOS & Full-Stack Developer" />
     <meta property="og:description" content="Founder & CEO at Hero Apps. iOS & Web Developer" />
     <meta property="og:image" content="http://erezhod.com/images/fb_avatar.png" />
 
